<resources>
    <string name="app_name">CS442 HW1</string>
    <string name="conversion">Conversion</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="equal">=</string>
    <string name="result">result</string>
    <string name="convert">CONVERT</string>
    <string name="log">LOG</string>
    <string name="input">Input</string>
    <string name="history_log">History Log:</string>
</resources>
